Changed data path

--- a/plot_behav.ipynb
+++ b/plot_behav.ipynb
@@ -191,7 +191,7 @@
     "#from functools import partial\n",
     "\n",
     "# Load data and reorganize\n",
-    "DF = pd.read_csv('behav.csv')\n",
+    "DF = pd.read_csv('data/behav.csv')\n",
     "DF = DF[['animal', 'ses', 'nTar', 'nVis', 'sucVis', 'nAud', 'sucAud']]\n",
     "DF"
    ]
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "(0.0004, 1.2)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
