--- a/plot_stvr.ipynb
+++ b/plot_stvr.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "[1305 rows x 9 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
     "from statsmodels.formula.api import ols\n",
     "\n",
     "# Load data and reorganize\n",
-    "DF = pd.read_csv('STVR_data.csv')\n",
+    "DF = pd.read_csv('data/stvr.csv')\n",
     "DF['is_sig'] = DF.pval<0.01\n",
     "DF = DF[['group', 'animal', 'SGN', 'unit', 'deaf_dur', 'pps', 'stvr', 'pval', 'is_sig']]\n",
     "DF"
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -254,7 +254,7 @@
        "Text(0, 0.5, 'ITD STVR')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
