--- a/plot_behav.ipynb
+++ b/plot_behav.ipynb
@@ -42,7 +42,7 @@
         "id": "Lq76fbeSioGV"
       },
       "source": [
-        " ## Fig 11. Behavioral training results\n",
+        " ## Figure - Behavioral training results\n",
         " ### Set up and load data"
       ]
     },
@@ -54,7 +54,7 @@
           "height": 419
         },
         "id": "U5mFOrStioGd",
-        "outputId": "b96a8b7b-1300-4354-908f-18249687c2bb"
+        "outputId": "06f67e1b-5758-40e6-d907-a4bed0c349ea"
       },
       "source": [
         "# Import libraries\n",
@@ -70,7 +70,7 @@
         "DF = DF[['animal', 'ses', 'nTar', 'nVis', 'sucVis', 'nAud', 'sucAud']]\n",
         "DF"
       ],
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -239,7 +239,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 3
         }
       ]
     },
@@ -260,7 +260,7 @@
           "height": 419
         },
         "id": "jA-x9OqQioGf",
-        "outputId": "133a1360-7bf0-4ada-f3fa-7d9c74d47e38"
+        "outputId": "1f20d830-7550-4e34-8826-a23403b29a1a"
       },
       "source": [
         "# We subtract 1 from the number of targets because the target nearest to the animal was excluded in each trial\n",
@@ -279,7 +279,7 @@
         "DF.loc[DF.aud<0.001, 'aud'] = 0.0005\n",
         "DF"
       ],
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +472,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 4
         }
       ]
     },
@@ -493,7 +493,7 @@
           "height": 544
         },
         "id": "TV67ZG-xioGg",
-        "outputId": "ca2f40e9-6828-4d59-fc16-6be5f7c9b464"
+        "outputId": "7ce3a01f-df8b-4f5f-86e3-8b2402b9cbf3"
       },
       "source": [
         "melted = pd.melt(DF, id_vars=['animal', 'ses'], value_vars=['vis_aud', 'aud'])\n",
@@ -505,7 +505,7 @@
         "plt.yscale('log')\n",
         "plt.ylim([0.0004, 1.2])"
       ],
-      "execution_count": 18,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -517,7 +517,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
@@ -542,7 +542,7 @@
           "height": 513
         },
         "id": "MAL-B90MioGg",
-        "outputId": "2b345085-7bdb-4559-a0d3-d4dfcc8f97fc"
+        "outputId": "fba60116-0fce-4c83-d552-42fb2ce32067"
       },
       "source": [
         "fig, axes = plt.subplots(2, 2, figsize=(10, 8), sharex=True, sharey=True) \n",
@@ -569,7 +569,7 @@
         "    axes[x, y].set_title(animal)\n",
         "    axes[x, y].set_ylim([0.0004, 1.2])"
       ],
-      "execution_count": 19,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
